fixing the button lang on mobile vers

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -906,8 +906,7 @@ button[type="submit"] {
 	.burger {
 		display: flex;
 		z-index: 10001;
-		position: relative;
-		top: 26px;
+
 	}
 
 	.nav-list {
@@ -951,7 +950,7 @@ button[type="submit"] {
 	}
 
 	.lang-wrapper {
-		top: -54dvh;
+		top: -56dvh;
 		left: -21dvh;
 	}
 
